--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -10,30 +10,37 @@
         margin-top: auto;
         margin-bottom: auto;
     }
-
-    .form-group {
-        margin-top: auto;
-        margin-bottom: auto;
-        margin-left: auto;
+    .form-check {
+        margin-left:0.5em;
+        margin-right: auto;
     }
 </style>
+
         <nav class="navbar navbar-light bg-light">
             <form class="form-inline">
                 <input class="form-control" type="search" placeholder="Rechercher" aria-label="Rechercher">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
             </form>
-            <div class="form-group">
-                <label for="exampleFormControlSelect1">Principaux tags</label>
-                <select class="form-control2" id="exampleFormControlSelect1">
-                    <form>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                    </form>
-                </select>
-            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">A mettre</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">A mettre</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">A mettre</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">A mettre</label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">A mettre</label>
+              </div>
         </nav>
-
+        {{ jsonData }}
         {% endblock %}
