Card align center

--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/jpeg" href="/static/beauty/logo.png" />
     <title>Passion froid</title>
 </head>
-<body> 
+<body>
 {% block body %}{% endblock %}
 </body>
 </html>
