--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -24,7 +24,7 @@
 
 <nav class="navbar navbar-light bg-light">
     <form class="form-inline">
-        <input class="form-control" type="search" placeholder="Rechercher" aria-label="Rechercher">
+        <input class="form-control" name="nom" type="search" placeholder="Rechercher" aria-label="Rechercher">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
     </form>
     <div class="form-check form-switch">
@@ -44,6 +44,7 @@
         <label class="form-check-label" for="flexSwitchCheckDefault">Droits d’utilisation limités</label>
     </div>
 </nav>
+{{ message }}
 {% for data in jsonData %}
 <div class="card" style="width: 20rem;">
     <img src="static/{{data.chemin}}" style="height: 30rem; object-fit: scale-down; ">
