--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -43,7 +43,7 @@
         <label class="form-check-label" for="flexSwitchCheckDefault">Droits d’utilisation limités</label>
     </div>
 </nav>
-{{ message }}
+<h4>{{ message }}</h4>
 {% for data in jsonData %}
 <div class="card" style="width: 20rem;">
     <img src="static/{{data.chemin}}" style="height: 30rem; object-fit: scale-down; ">
