--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -48,7 +48,7 @@
 <div class="card" style="width: 20rem;">
     <img src="static/{{data.chemin}}" style="height: 30rem; object-fit: scale-down; ">
     <div class="card-body">
-        <a class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5000/login';" target="_blank">{{data.nom}}</a>
+        <a class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5000/info';" target="_blank">{{data.nom}}</a>
     </div>
 </div>
 
