--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -1,10 +1,9 @@
 {% extends 'layouts/default.html' %}
 {% block body %}
-
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+
 <style scoped>
     .form-inline {
         margin-right: auto;
@@ -48,7 +47,7 @@
 <div class="card" style="width: 20rem;">
     <img src="static/{{data.chemin}}" style="height: 30rem; object-fit: scale-down; ">
     <div class="card-body">
-        <a class="btn btn-primary" onclick="window.location.href='http://127.0.0.1:5000/info';" target="_blank">{{data.nom}}</a>
+        <a class="btn btn-primary" name="info" onclick="window.location.href='http://127.0.0.1:5000/info?chemin={{data.chemin}}';" target="_blank">{{data.nom}}</a>
     </div>
 </div>
 
