--- a/templates/pages/info.html
+++ b/templates/pages/info.html
@@ -30,7 +30,7 @@
     }
 </style>
 <nav class="navbar navbar-light bg-light">
-    <a class="navbar-menu" href="http://127.0.0.1:5000/photos">Menu</a>
+    <a class="navbar-menu" href="https://froidynov.herokuapp.com/photos">Menu</a>
 </nav>
 <br>
 <p>Information / Modification de l'image</p>
@@ -114,7 +114,7 @@
                     </option>
                     </select></p>
                     <div class="button">
-                        <form method="POST" action="http://127.0.0.1:5000/upload"
+                        <form method="POST" action="https://froidynov.herokuapp.com/upload"
                     <button type="submit" class="btn btn-outline-primary">Sauvegarder</button>
                 </div>
                 <br>
