--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -77,7 +77,7 @@
         </div>
         <form>
             <div class="button">
-            <a href="http://127.0.0.1:5000/upload"><button type="button" actio class="btn btn-outline-primary">Upload</button></a>
+            <a href="https://froidynov.herokuapp.com/upload"><button type="button" actio class="btn btn-outline-primary">Upload</button></a>
         </div>
         </form>
     </nav>
@@ -112,7 +112,7 @@
 <div class="card" style="width: 20rem;">
     <img src="static/{{data.chemin}}" style="height: 30rem; object-fit: scale-down; ">
     <div class="card-body">
-        <a class="btn btn-primary" name="info" onclick="window.location.href='http://127.0.0.1:5000/info?chemin={{data.chemin}}';" target="_blank">{{data.nom}}</a>
+        <a class="btn btn-primary" name="info" onclick="window.location.href='https://froidynov.herokuapp.com/info?chemin={{data.chemin}}';" target="_blank">{{data.nom}}</a>
     </div>
 </div>
 
